# kate

addons/: CMakeLists.txt
addons/kate/close-except-like/: close_except_plugin.cpp
addons/tikzviewer/: CMakeLists.txt  katetikzviewer.cpp  katetikzviewer.h  katetikzviewerconfigpage.cpp  katetikzviewerconfigpage.h  katetikzviewerplugin.cpp  katetikzviewerplugin.desktop  katetikzviewerplugin.h  katetikzviewerpluginview.cpp  katetikzviewerpluginview.h
kate/: kateappadaptor.cpp  main.cpp
kate/app/: kateappadaptor.cpp  kateappadaptor.h  katemain.cpp
kate/src/: kateappadaptor.cpp  kateappadaptor.h  main.cpp
